--- a/module_map/src/main/AndroidManifest.xml
+++ b/module_map/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         <activity
             android:name=".MapActivity"
             android:exported="false" />
+        <activity android:name=".ui.WNaviGuideActivity"/>
     </application>
 
 </manifest>
